[project]
name = "xtract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric", email = "tanker327@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=xtract --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["xtract"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
