[project]
name = "xtract"
version = "1.4.1"
description = "A library for extracting data from X (formerly Twitter) posts"
readme = "README.md"
authors = [
    { name = "Eric", email = "tanker327@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.2",
    "idna>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "flake8>=6.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=xtract --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["xtract"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
